[package]
name = "aaacs"
description = "Automated Accurate Accounting Collaborative System"
version = "0.1.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
iced = { version = "0.3.0", features = ["glow"] }
serde_json = "1.0.47"
data-encoding = "2.2.0"
structopt = "0.3"

[dependencies.num-rational]

version = "0.2"
features = ["serde"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_native = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
iced_web = { version = "0.4.0" }
dodrio = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ["Storage", "Window", "Document", "FileReader", "Blob", "HtmlInputElement", "FileList", "File", "Event", "console"]

["features"]

debug = []
